# turingc

./: CMakeLists.txt  README.md  conanfile.txt
assets/machines/: Collatz.txt  CollatzSecondTry.txt  parity.txt  parity_with_redundancy.txt  rm.txt
src/: Turing_machine.c  Turing_machine.h  Turing_machine_parser.c  Turing_machine_parser.h  Turing_machine_view.c  Turing_machine_view.h  main.c  simulator.c  simulator.h
